--- a/src/app/components/misc/signup/signup.component.html
+++ b/src/app/components/misc/signup/signup.component.html
@@ -1,6 +1,6 @@
 <h1>Sign Up</h1>
 <br>
-<form #signupForm="ngForm" (ngSubmit)="onSubmit()">
+<form #signupForm="ngForm" (ngSubmit)="onSubmitSignup()">
 
   <div class="form-group" [class.has-error]="email.errors && email.touched">
     <label for="email">Email</label>
