login works done

--- a/src/app/components/misc/login/login.component.html
+++ b/src/app/components/misc/login/login.component.html
@@ -1,6 +1,6 @@
 <h1>Login</h1>
 <br>
-<form #loginForm="ngForm" (ngSubmit)="onSubmit()">
+<form #loginForm="ngForm" (ngSubmit)="onSubmitLogin()">
 
   <div class="form-group" [class.has-error]="email.errors && email.touched">
     <label for="email">Email</label>
