--- a/src/app/components/misc/login/login.component.html
+++ b/src/app/components/misc/login/login.component.html
@@ -14,7 +14,7 @@
     <span class="text-danger" *ngIf="email.touched && email.errors">Email not valid</span>
   </div>
 
-  <div class="form-group" [class.has-error]="email.errors && email.touched">
+  <div class="form-group" [class.has-error]="password.errors && password.touched">
     <label for="password">Password</label>
     <input type="password"
            class="form-control"
@@ -25,6 +25,6 @@
            [(ngModel)]="user.password" required>
   </div>
   <span class="text-danger" *ngIf="password.touched && password.errors">Password not valid</span>
-
-  <button class="btn btn-success">Login</button>
+<br>
+  <button class="btn btn-success" [disabled]="!loginForm.valid">Login</button>
 </form>
