--- a/src/app/components/parking/parking-create/parking-create.component.html
+++ b/src/app/components/parking/parking-create/parking-create.component.html
@@ -1,121 +1,72 @@
-<app-autocomplete></app-autocomplete>
+<div class="container">
+
+  <h1>Pruebas autocompletado</h1>
 
 
-<h1>Submit Parking</h1>
+  <agm-map
+    [longitude]="location[0]"
+    [latitude]="location[1]"
+    [scrollwheel]="false"
+    [zoom]="zoom">
+    <agm-marker
+      [latitude]="latitude"
+      [longitude]="longitude">
+    </agm-marker>
+  </agm-map>
 
-<form #parkingForm="ngForm" (ngSubmit)="onSubmitParking()">
+  <form #parkingForm="ngForm" (ngSubmit)="onSubmitParking()">
 
-  <div class="form-group" >
-    <label for="name">Name</label>
-    <input type="text"
-           class="form-control"
-           id="name"
-           name="name"
-           placeholder="Enter parking name"
-           #name="ngModel"
-           [(ngModel)]="parking.name" required>
-    <!-- <span class="text-danger" *ngIf="email.touched && email.errors">Email not valid</span> -->
-  </div>
+    <div class="form-group">
+      <label for="address">Parking Address</label>
+      <input
+        id="address"
+        placeholder="Enter complete parking address"
+        autocorrect="off"
+        autocapitalize="off"
+        spellcheck="off"
+        type="text"
+        class="form-control"
+        #search [formControl]="searchControl"
+      >
+    </div>
 
-  <div class="form-group">
-    <label for="address">Address</label>
-    <input type="text"
-           class="form-control"
-           id="address"
-           name="address"
-           placeholder="Enter parking address"
-           #password="ngModel"
-           [(ngModel)]="parking.address" required>
-  </div>
 
-  <div class="form-group" >
-    <label for="locality">Locality</label>
-    <input type="text"
-           class="form-control"
-           id="locality"
-           name="locality"
-           placeholder="Enter locality name"
-           #name="ngModel"
-           [(ngModel)]="parking.locality" required>
-    <!-- <span class="text-danger" *ngIf="email.touched && email.errors">Email not valid</span> -->
-  </div>
+    <div class="form-group">
+      <label for="name">Parking Name</label>
+      <input type="text"
+             class="form-control"
+             id="name"
+             name="name"
+             placeholder="Enter parking name"
+             #name="ngModel"
+             [(ngModel)]="parking.name" required>
+      <span class="text-danger" *ngIf="name.errors && name.touched">Name not valid</span>
+    </div>
 
-  <div class="form-group" >
-    <label for="postalCode">Postal Code</label>
-    <input type="text"
-           class="form-control"
-           id="postalCode"
-           name="postalCode"
-           placeholder="Enter Postal Code"
-           #name="ngModel"
-           [(ngModel)]="parking.postalCode" required>
-    <!-- <span class="text-danger" *ngIf="email.touched && email.errors">Email not valid</span> -->
-  </div>
+    <div class="form-group" [class.has-error]="totalParkingSpots.touched && totalParkingSpots.errors">
+      <label for="totalParkingSpots">Total Parking Spots</label>
+      <input type="number"
+             class="form-control"
+             id="totalParkingSpots"
+             name="totalParkingSpots"
+             placeholder="Enter Total Parking Spots"
+             #totalParkingSpots="ngModel"
+             [(ngModel)]="parking.totalParkingSpots" required>
+      <span class="text-danger" *ngIf="totalParkingSpots.touched && totalParkingSpots.errors">Name not valid</span>
+    </div>
 
-  <div class="form-group" >
-    <label for="totalParkingSpots">Total Parking Spots</label>
-    <input type="number"
-           class="form-control"
-           id="totalParkingSpots"
-           name="totalParkingSpots"
-           placeholder="Enter Total Parking Spots"
-           #name="ngModel"
-           [(ngModel)]="parking.totalParkingSpots" required>
-    <!-- <span class="text-danger" *ngIf="email.touched && email.errors">Email not valid</span> -->
-  </div>
+    <div class="form-group">
+      <label for="schedule">Schedule</label>
+      <input type="text"
+             class="form-control"
+             id="schedule"
+             name="schedule"
+             placeholder="Enter Schedule"
+             #schedule="ngModel"
+             [(ngModel)]="parking.schedule" required>
+      <span class="text-danger" *ngIf="schedule.touched && schedule.errors">Email not valid</span>
+    </div>
 
-  <div class="form-group" >
-  <label for="schedule">Schedule</label>
-  <input type="text"
-         class="form-control"
-         id="schedule"
-         name="schedule"
-         placeholder="Enter Schedule"
-         #name="ngModel"
-         [(ngModel)]="parking.schedule" required>
-  <!-- <span class="text-danger" *ngIf="email.touched && email.errors">Email not valid</span> -->
+    <button class="btn btn-success" [disabled]="!parkingForm.valid">Create Parking</button>
+  </form>
 </div>
-
-  <div class="form-group" >
-    <label for="longitude">Longitude</label>
-    <input type="number"
-           class="longitude"
-           id="longitude"
-           name="longitude"
-           placeholder="Enter Longitude"
-           #name="ngModel"
-           [(ngModel)]="parking.longitude" required>
-    <!-- <span class="text-danger" *ngIf="email.touched && email.errors">Email not valid</span> -->
-  </div>
-
-  <div class="form-group" >
-    <label for="latitude">Latitude</label>
-    <input type="number"
-           class="latitude"
-           id="latitude"
-           name="latitude"
-           placeholder="Enter Latitude"
-           #name="ngModel"
-           [(ngModel)]="parking.latitude" required>
-    <!-- <span class="text-danger" *ngIf="email.touched && email.errors">Email not valid</span> -->
-  </div>
-
-
-  <button class="btn btn-success">Create Parking</button>
-</form>
-
-
-<!--
-
-name: String;
-    address: String;
-    locality: String;
-    postalCode: String;
-    totalParkingSpots?: Number;
-    availableParkingSpots?: Number;
-    schedule: String;
-    longitude: Number;
-    latitude: Number;
-
-
--->
