--- a/src/app/components/misc/nav/nav.component.css
+++ b/src/app/components/misc/nav/nav.component.css
@@ -1,5 +1,5 @@
 .dropbtn {
-    background-color: #4CAF50;
+    /* background-color: #4CAF50; */
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -34,5 +34,5 @@
 }
 
 .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+    /* background-color: #3e8e41; */
 }
