--- a/src/app/components/parking/parking-list/parking-list.component.html
+++ b/src/app/components/parking/parking-list/parking-list.component.html
@@ -1,117 +1,60 @@
 <div class="container">
   <h2>Panel Group</h2>
   <p>The panel-group class clears the bottom-margin. Try to remove the class and see what happens.</p>
-  <div *ngFor="let parking of parkings, i">
-  <form #editForm="ngForm" (ngSubmit)="onSubmitEdit($event)">
-  <div class="panel-group form-group">
-    <div class="panel panel-default">
-      <div class="panel-heading"> {{parking.name}}</div>
-      <div class="panel-body">
-        <table class="table">
-          <tbody>
-            <tr>
-              <th>Address</th>
-              <td>
-                <input type="text"
-                         class="form-control"
-                         name="address"
-                         #address="ngModel"
-                         [value]="parking.address"
-                         [(ngModel)]="parking.address" required>
-              </td>
-            </tr>
+  <div *ngFor="let parking of parkings; let i = index">
+    <form #editForm="ngForm" (ngSubmit)="onSubmitEdit(editForm.value, i)">
+      <div class="panel-group form-group">
+        <div class="panel panel-default">
+          <div class="panel-heading"> {{parking.name}}</div>
+          <div class="panel-body">
+            <table class="table">
+              <tbody>
+                <tr>
+                  <th>Address</th>
+                  <td>
+                    <input type="text" class="form-control" name="address" #address="ngModel" [value]="parking.address" [(ngModel)]="parking.address"
+                      required>
+                  </td>
+                </tr>
 
-            <!-- <tr>
-                <th>Longitude</th>
-                <td>
-                  <input type="number"
-                           class="form-control"
-                           name="longitude"
-                           #parking.location[0]="ngModel"
-                           [value]="parking.location[0]"
-                           [(ngModel)]="parking.location[0]" required>
-                </td>
-              </tr>
-              <tr>
+                <tr>
+                  <th>Longitude</th>
+                  <td>
+                    <input type="number" class="form-control" name="longitude" #parking.longitude="ngModel" [value]="parking.location[0]" [(ngModel)]="parking.location[0]"
+                      required>
+                  </td>
+                </tr>
+                <tr>
                   <th>Latitude</th>
                   <td>
-                    <input type="number"
-                             class="form-control"
-                             name="latitude"
-                             #parking.location[1]="ngModel"
-                             [value]="parking.location[1]"
-                             [(ngModel)]="parking.location[1]" required>
+                    <input type="number" class="form-control" name="latitude" #parking.latitude="ngModel" [value]="parking.location[1]" [(ngModel)]="parking.location[1]"
+                      required>
                   </td>
-                </tr> -->
-                <tr> 
-                    <th>Spots</th>
-                    <td>
-                      <input type="text"
-                               class="form-control"
-                               name="totalParkingSpots"
-                               #totalParkingSpots="ngModel"
-                               [value]="parking.totalParkingSpots"
-                               [(ngModel)]="parking.totalParkingSpots" required>
-                    </td>
-                  </tr>
-                  <tr>
-                      <th>Schedule</th>
-                      <td>
-                        <input type="text"
-                                 class="form-control"
-                                 name="schedule"
-                                 #schedule="ngModel"
-                                 [value]="parking.schedule"
-                                 [(ngModel)]="parking.schedule" required>
-                      </td>
-                    </tr>
-  
+                </tr>
+                <tr>
+                  <th>Spots</th>
+                  <td>
+                    <input type="text" class="form-control" name="totalParkingSpots" #totalParkingSpots="ngModel" [value]="parking.totalParkingSpots"
+                      [(ngModel)]="parking.totalParkingSpots" required>
+                  </td>
+                </tr>
+                <tr>
+                  <th>Schedule</th>
+                  <td>
+                    <input type="text" class="form-control" name="schedule" #schedule="ngModel" [value]="parking.schedule" [(ngModel)]="parking.schedule"
+                      required>
+                  </td>
+                </tr>
+                <input name="id" type="hidden" #id="ngModel" [value]="parking.id" [(ngModel)]="parking.id">
 
+              </tbody>
+            </table>
 
-             <!--
-            <tr>
-              <th>Longitude</th>
-              <td><input type="number" [value]="parking.location[0]"></td>
-            </tr>
-            <tr>
-              <th>Latitude</th>
-              <td><input type="number" [value]="parking.location[0]"></td>
-            </tr>
-            <tr>
-              <th>Spots</th>
-              <td><input type="number" [value]="parking.totalParkingSpots"></td>
-            </tr>
-            <tr>
-              <th>Schedule</th>
-              <td><input type="text" [value]="parking.schedule"></td>
-            </tr>
-              <input type="hidden" [value]="parking.id"> -->
-
-
-
-              <!-- <div class="form-group">
-                  <label for="name">Parking Name</label>
-                  <input type="text"
-                         class="form-control"
-                         id="name"
-                         name="name"
-                         placeholder="Enter parking name"
-                         #name="ngModel"
-                         [(ngModel)]="parking.name" required>
-                  <span class="text-danger" *ngIf="name.errors && name.touched">Name not valid</span>
-                </div> -->
-
-
-          </tbody>
-        </table>
-
-
-
-        <button class="btn btn-success">Save</button>
+            <button class="btn btn-success">Save</button>
+          </div>
+        </div>
       </div>
-    </div>
+
+    </form>
   </div>
-  
-  </form>
-</div>
 </div>
