add link list and update in navbar

--- a/src/app/components/misc/nav/nav.component.html
+++ b/src/app/components/misc/nav/nav.component.html
@@ -12,7 +12,8 @@
           <div class="dropdown navbar-left">
               <button class="dropbtn bg-primary">Options</button>
               <div class="dropdown-content">
-                <a [routerLink]="['/parkings/create']"><strong>Create Parking</strong></a>               
+                <a [routerLink]="['/parkings/create']"><strong>Create Parking</strong></a>
+                <a [routerLink]="['/parkings/list']"><strong>List/Update Parking</strong></a>               
               </div>
           </div>
           
