--- a/src/app/components/parking/parking-list/parking-list.component.html
+++ b/src/app/components/parking/parking-list/parking-list.component.html
@@ -2,9 +2,11 @@
   <h2>Panel Group</h2>
   <p>The panel-group class clears the bottom-margin. Try to remove the class and see what happens.</p>
   <div *ngFor="let parking of parkings; let i = index">
+    <div class="panel-group form-group">
+      <div class="panel panel-default">
     <form #editForm="ngForm" (ngSubmit)="onSubmitEdit(editForm.value, i)">
-      <div class="panel-group form-group">
-        <div class="panel panel-default">
+
+
           <div class="panel-heading"> {{parking.name}}</div>
           <div class="panel-body">
             <table class="table">
@@ -52,9 +54,12 @@
 
             <button class="btn btn-success">Save</button>
           </div>
-        </div>
-      </div>
-
     </form>
+    <form #editForm="ngForm" (ngSubmit)="onSubmitDelete(editForm.value, i)">
+      <input name="id" type="hidden" #id="ngModel" [value]="parking.id" [(ngModel)]="parking.id">
+      <button class="btn btn-danger">Delete</button>
+    </form>
+      </div>
+  </div>
   </div>
 </div>
