--- a/src/app/components/misc/signup/signup.component.html
+++ b/src/app/components/misc/signup/signup.component.html
@@ -34,7 +34,7 @@
             #role="ngModel"
             [(ngModel)]="user.role" required>
       <option value="user">Normal User</option>
-      <option value="admin">Parking Company</option>
+      <option value="company">Parking Company</option>
     </select>
   </div>
 
