--- a/src/app/components/misc/nav/nav.component.html
+++ b/src/app/components/misc/nav/nav.component.html
@@ -5,12 +5,12 @@
             <a class="navbar-brand" href="#">Parking<strong>Spot</strong></a>
           </div>
           <ul class="nav navbar-nav navbar-right">
-            <li><a [routerLink]="['/signup']" class="btn.btn-default btn-lg"><span class="glyphicon glyphicon-user" ></span> Sign Up</a></li>
-            <li><a [routerLink]="['/login']" class="btn.btn-default btn-lg"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-            <li><a (click)="onclickLogout()" class="btn.btn-default btn-lg"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+            <li *ngIf="!user"><a [routerLink]="['/signup']" class="btn.btn-default btn-lg"><span class="glyphicon glyphicon-user" ></span> Sign Up</a></li>
+            <li *ngIf="!user"><a [routerLink]="['/login']" class="btn.btn-default btn-lg"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            <li *ngIf="user"><a (click)="onclickLogout()" class="btn.btn-default btn-lg"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
           </ul>
-          <div class="dropdown navbar-left">
-              <button class="dropbtn bg-primary">Options</button>
+          <div class="dropdown navbar-left" *ngIf="user">
+              <button class="dropbtn bg-primary" *ngIf="user.role === 'admin' || user.role === 'company'">Options</button>
               <div class="dropdown-content">
                 <a [routerLink]="['/parkings/create']"><strong>Create Parking</strong></a>
                 <a [routerLink]="['/parkings/list']"><strong>List/Update Parking</strong></a>
