--- a/src/app/components/parking/map/map.component.html
+++ b/src/app/components/parking/map/map.component.html
@@ -11,7 +11,10 @@
   >
       <agm-direction *ngIf="dir"
                      [origin]="dir.origin"
-                     [destination]="dir.destination">
+                     [destination]="dir.destination"
+                     [travelMode]="travelMode"
+                     [avoidHighways]="avoidHighways"
+      >
       </agm-direction>
       <agm-info-window>
         <h3>{{parking.name}}</h3>
