--- a/src/app/components/parking/parking-list/parking-list.component.html
+++ b/src/app/components/parking/parking-list/parking-list.component.html
@@ -1,6 +1,5 @@
 <div class="container">
-  <h2>Panel Group</h2>
-  <p>The panel-group class clears the bottom-margin. Try to remove the class and see what happens.</p>
+  <h2>Parkings List</h2>
   <div *ngFor="let parking of parkings; let i = index">
     <div class="panel-group form-group">
       <div class="panel panel-default">
