--- a/src/app/components/misc/nav/nav.component.css
+++ b/src/app/components/misc/nav/nav.component.css
@@ -33,6 +33,7 @@
     display: block;
 }
 
-.dropdown:hover .dropbtn {
-    /* background-color: #3e8e41; */
-}
+/* .dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+} */
+
