--- a/src/app/components/user/user-profile/user-profile.component.html
+++ b/src/app/components/user/user-profile/user-profile.component.html
@@ -37,5 +37,12 @@
       </table>
 
       <button class="btn btn-success">Save</button>
+
     </div>
   </form>
+  <div ngif user have parkings ></div>
+  <app-user-parkings></app-user-parkings>
+  <!-- <button onclick ejecuta funcion>
+    Mostr
+  </button>
+  <micomponente ngif showparkings ></micomponente> -->
