styles first part done

--- a/src/app/components/parking/parking-create/parking-create.component.html
+++ b/src/app/components/parking/parking-create/parking-create.component.html
@@ -67,6 +67,6 @@
       <span class="text-danger" *ngIf="schedule.touched && schedule.errors">Email not valid</span>
     </div>
 
-    <button class="btn btn-success" [disabled]="!parkingForm.valid">Create Parking</button>
+    <button class="btn" [disabled]="!parkingForm.valid">Create Parking</button>
   </form>
 </div>
