--- a/src/app/components/misc/login/login.component.html
+++ b/src/app/components/misc/login/login.component.html
@@ -1,9 +1,10 @@
-<h1>Login</h1>
+<div class="login-form">
+<h1 class="text-center">Login</h1>
 <br>
+
 <form #loginForm="ngForm" (ngSubmit)="onSubmitLogin()">
 
   <div class="form-group" [class.has-error]="email.errors && email.touched">
-    <label for="email">Email</label>
     <input type="email"
            class="form-control"
            id="email"
@@ -15,7 +16,6 @@
   </div>
 
   <div class="form-group" [class.has-error]="password.errors && password.touched">
-    <label for="password">Password</label>
     <input type="password"
            class="form-control"
            id="password"
@@ -28,3 +28,4 @@
 <br>
   <button class="btn btn-success" [disabled]="!loginForm.valid">Login</button>
 </form>
+</div>
