--- a/src/app/components/misc/signup/signup.component.html
+++ b/src/app/components/misc/signup/signup.component.html
@@ -1,20 +1,19 @@
-<h1>Sign Up</h1>
+<div class="login-form">
+<h1 class="text-center">Sign Up</h1>
 <br>
 <form #signupForm="ngForm" (ngSubmit)="onSubmitSignup()">
   <div class="form-group" [class.has-error]="name.errors && name.touched">
-    <label for="name">Name / Company</label>
     <input type="text"
            class="form-control"
            id="name"
            name="name"
-           placeholder="Enter name / company"
+           placeholder="Enter name or company"
            #name="ngModel"
            [(ngModel)]="user.name" required>
     <span class="text-danger" *ngIf="name.touched && name.errors">Name not valid</span>
   </div>
 
   <div class="form-group" [class.has-error]="email.errors && email.touched">
-    <label for="email">Email</label>
     <input type="email"
            class="form-control"
            id="email"
@@ -26,7 +25,6 @@
   </div>
 
   <div class="form-group" [class.has-error]="password.errors && password.touched">
-    <label for="password">Password</label>
     <input type="password"
            class="form-control"
            id="password"
@@ -37,7 +35,7 @@
   </div>
   <span class="text-danger" *ngIf="password.touched && password.errors">Password not valid</span>
 
-  <div class="form-group">
+  <div class="form-group text-left">
     <label for="role">Role</label>
     <select class="form-control"
             id="role"
@@ -48,7 +46,7 @@
       <option value="company">Parking Company</option>
     </select>
   </div>
-  <div class="form-group">
+  <div class="form-group text-left">
     <label for="city">City</label>
     <select class="form-control"
             id="city"
@@ -63,3 +61,4 @@
 
   <button class="btn btn-success">Submit</button>
 </form>
+</div>
