--- a/src/app/components/parking/parking-create/parking-create.component.css
+++ b/src/app/components/parking/parking-create/parking-create.component.css
@@ -1,3 +1,17 @@
 agm-map {
   height: 300px;
 }
+
+form {
+  color: #7a7a7a;
+  border-radius: 3px;
+  margin-bottom: 15px;
+  background: #fff;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  padding: 30px;
+}
+
+.btn {
+  background: #3598dc;
+  color: white;
+}
