--- a/src/app/components/parking/parking-list/parking-list.component.css
+++ b/src/app/components/parking/parking-list/parking-list.component.css
@@ -1,4 +1,12 @@
-.btn-danger {
-  margin-left: 15px;
+button {
+  width: 75px;
+}
+
+.card {
+  color: #7a7a7a;
+  border-radius: 3px;
   margin-bottom: 15px;
+  background: #fff;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  padding: 30px;
 }
