--- a/src/app/components/parking/user-parkings/user-parkings.component.html
+++ b/src/app/components/parking/user-parkings/user-parkings.component.html
@@ -1,8 +1,24 @@
-<div *ngIf="userParkings.length > 0" >
-  <ul *ngFor="let parking of userParkings">
-    <li>
-      {{parking.name}}
-      <a [routerLink]="['/parkings/list']">Enlace</a>
-    </li>
-  </ul>
+<div *ngIf="userParkings.length > 0" class="col-8">
+  <div *ngFor="let parking of userParkings">
+    <div class="card col-6">
+        
+      <div> 
+        <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom">
+          <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+        </agm-map>
+      </div>
+        <div class="card-body">
+      <h4 class="card-title"><strong>{{parking.name}}</strong></h4>
+      <p>{{parking.address}}</p>
+      <a [routerLink]="['/parkings/list']">Edit parking</a>
+    </div>
+    </div>
+  </div>
 </div>
+
+
+
+    
+<!--     
+      <p class="card-text">Some example text. Some example text.</p> -->
+
