--- a/src/app/components/user/user-profile/user-profile.component.html
+++ b/src/app/components/user/user-profile/user-profile.component.html
@@ -1,47 +1,58 @@
+
+<div class="container">
+  <div class="row align-items-center">
+    <div class="card col-6">
+        <!-- <img class="card-img-top" src="..." alt="Card image cap"> -->
+        <div class="card-body">
 <form #editForm="ngForm" (ngSubmit)="onSubmitEdit(editForm)">
-    <div class="panel-heading"> {{user.name}}</div>
-    <div class="panel-body">
-      <table class="table">
-        <tbody>
-            <tr>
-                <th>Name</th>
-                <td>
-                  <input type="text" class="form-control" name="name" #name="ngModel" [value]="user.name" [(ngModel)]="user.name"
-                         required>
-                </td>
-              </tr>
-        <tr>
-          <th>Email</th>
-          <td>
-            <input type="text" class="form-control" name="email" #email="ngModel" [value]="user.email" [(ngModel)]="user.email"
-                   required>
-          </td>
-        </tr>
-
-        <tr>
-          <th>City</th>
-          <td>
-            <p>{{user.city}}</p>
-          </td>
-        </tr>
-        <tr>
-           <th>Role</th>
-          <td>
-            <p>{{user.role}}</p>
-          </td>
-        </tr>
-
-        <input name="id" type="hidden" #id="ngModel" [value]="user.id" [(ngModel)]="user.id">
-
-        </tbody>
-      </table>
+    <div class="card-title">
+      <h2><strong>{{user.name}}</strong> <i>from {{user.city}}</i></h2></div>
+      
+      <div class="card-text col-8">
+        <div class="input-group">
+          <label>Name</label> &nbsp;
+          <input type="text" 
+            class="form-control"
+            name="name" 
+            #name="ngModel" 
+            [value]="user.name" 
+            [(ngModel)]="user.name"
+          required>
+       </div>
+        <div class="input-group">
+          <label>Email</label> &nbsp;
+          <input type="text" 
+            class="form-control" 
+            name="email" 
+            #email="ngModel" 
+            [value]="user.email" 
+            [(ngModel)]="user.email"
+           required>
+        </div>
+        <br>
+        <input name="id" 
+          type="hidden" 
+          #id="ngModel" 
+          [value]="user.id" 
+          [(ngModel)]="user.id">
 
       <button class="btn btn-success">Save</button>
 
     </div>
   </form>
-  <div ngif user have parkings ></div>
+</div>
+
+</div>
+</div>
+
+<!-- 
+  <div ngif user have parkings ></div> -->
+  </div>
+<div class="container">
   <app-user-parkings></app-user-parkings>
+</div>
+
+
   <!-- <button onclick ejecuta funcion>
     Mostr
   </button>
